# azimhims

./: Assignment1.ipynb  Assignment_2.ipynb  Assignments 2 Concatenating from Azeem Khan.ipynb  AzeemKhan_list_Assignment.ipynb  Copy_of_Welcome_To_Colab.ipynb  Pretrain_Assignment_Utkface.ipynb  Pretrain_Assignment_Utkface1.ipynb  Pretrain_with_FineTune.ipynb  Python basic for practice 2-checkpoint.ipynb  QuestionNumer4_final_exam_of_DL.ipynb  README.md  Session 12 12112023.ipynb  Session 13.ipynb  Session 14.ipynb  Session 15.ipynb  Session 3.ipynb  Session 4.ipynb  Session 5.ipynb  Session 7 28102023.ipynb  Session 8 29102023.ipynb  Session 9 04112023.ipynb  Welcome_To_Colab.ipynb  adult income.ipynb  cats dog classifier  face_identification.ipynb  matplotliblibrary.ipynb  missing value on test files, with replace mean and meadin-checkpoint.ipynb  missing values with train data.ipynb  pretrain_model_testing.ipynb  python basic for practice-checkpoint.ipynb
Error_Resolve/: readme.txt
Misc/: db.py  (+6 more)
Misc/pro1/: database.db  pyproject.toml
Misc/pro1/pro1/: Hero.py  customer.py  lecture.py  main.py  profile.py  relate.py  relationship.py  relationship2.py  vendor.py  visit.py
atl/: front.py  pyproject.toml
atl/atl/: data.py  main.py  models.py
web/web_app/web_app/: Dockerfile.dev  Dockerfront  docker-compose.txt  docker-compose.yml  flowchart.drawio  producer.py  pyproject.toml  streamlit_app.py
web/web_app/web_app/web_app/: auth.py  auth1.txt  consumer.py  database.py  main.py  models.py
web/web_app/web_app/web_app/routers/: inventory.py  reports.py  sales.py
(+6 files in other folders)
