[tool.poetry]
name = "atl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
