[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
sqlmodel = "^0.0.18"
pydantic = "^2.7.1"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
psycopg2 = "^2.9.9"
kafka-python = "^2.0.2"
six = "^1.16.0"
aiokafka = "^0.10.0"






[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
